# rusty-pi-os

bootloader/: Cargo.toml  Makefile
bootloader/src/: kmain.rs  lang_items.rs
kernel/: Cargo.toml  Makefile  Xargo.toml  build.rs
kernel/ext/: init.S  layout.ld
kernel/src/: aarch64.rs  console.rs  draw.rs  kmain.rs  lang_items.rs  raccoon.rs  racoon.rs  shell.rs  syscalls.rs
kernel/src/fs/: mod.rs  sd.rs
kernel/src/process/: mod.rs  process.rs  scheduler.rs  stack.rs
kernel/src/traps/: irq.rs  mod.rs  syndrome.rs  syscall.rs  trap_frame.rs
pi/: Cargo.toml
pi/src/: character_set.rs  common.rs  console.rs  framebuffer.rs  gpio.rs  interrupt.rs  lib.rs  mailbox.rs  propertytag.rs  screen.rs  timer.rs  uart.rs
pi/src/allocator/: bin.rs  bump.rs  linked_list.rs  mod.rs  tests.rs  util.rs
pi/src/atags/: atag.rs  mod.rs  raw.rs
std/: Cargo.toml  Xargo.toml
std/src/: alloc.rs  ascii.rs  lib.rs  macros.rs  path.rs
std/src/collections/: mod.rs
std/src/collections/hash/: map.rs  table.rs
std/src/io/: mod.rs
std/src/prelude/: v1.rs
std/src/sync/: mod.rs
std/src/sys/ros/: mod.rs
std/src/sys_common/: mod.rs
