[package]
name = "bootloader"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"

[dependencies.pi]
path = "../pi"
features = ["custom-std"]

# from assignment 1
[dependencies.xmodem]
path = "../../1-shell/xmodem/"
features = ["custom-std"]

[dependencies.std]
path = "../std"
