[package]
name = "kernel"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
lto = true

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies.pi]
path = "../pi"
stage = 1

[dependencies.volatile]
path = "../volatile"
stage = 1

# from assignment 1
[dependencies.stack-vec]
path = "../../1-shell/stack-vec/"
stage = 1

# from assignment 2
[dependencies.fat32]
path = "../../2-fs/fat32/"
stage = 1

[dependencies.std]
path = "../std"
stage = 0
