[package]
name = "kernel"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
debug = true

[profile.release]
debug = true
panic = "abort"
lto = true

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies.pi]
path = "../pi"
features = ["custom-std"]

[dependencies.volatile]
path = "../volatile"

# from assignment 1
[dependencies.stack-vec]
path = "../../1-shell/stack-vec/"

# from assignment 2
[dependencies.fat32]
path = "../../2-fs/fat32/"
features = ["custom-std"]

[dependencies.std]
path = "../std"
