[package]
name = "pi"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[dependencies]
volatile = { path = "../volatile" }
stack-vec = { path = "../../1-shell/stack-vec/" }
byteorder = { version = "1", default-features = false }
std = { path = "../../os/std" }

[profile.dev]
std = { path = "../std" }
panic = "abort"
lto = true
debug = true

[profile.test]
debug = true

[profile.release]
std = { path = "../std" }
panic = "abort"
lto = true
