[package]
name = "pi"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[features]
custom-std = ["std"]

[dependencies]
volatile = { path = "../volatile" }
stack-vec = { path = "../../1-shell/stack-vec/" }
byteorder = { version = "1", default-features = false }

std = { path = "../../os/std", optional = true }

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
lto = true
